Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-5002

Font Corruption using QGLWidget::renderText and QPainter::drawText

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.6.1
    • 4.6.0
    • GUI: OpenGL
    • None
    • 5394052c422f7087263ad6dc6d6a4448b4c4afba

      Product
      Qt
      Function
      OpenGL
      Version
      4.6.0-beta
      Platform
      Windows Vista
      Platform details
      Vista Home Premium x64 with Service Pack 2.
      Compilers
      MSVC
      Compiler details
      Visual Studio 2005 SP2
      Subject
      Font Corruption using QGLWidget::renderText
      Steps to reproduce / test case
      Compiled our code against 4.6.0 beta, fonts output to a QGLWidget using QGL::renderText are corrupted (about 50% of the time). The background appears black, and the foreground is unclear.
      More information

        1. qt-rt-bug-001.png
          qt-rt-bug-001.png
          224 kB
        2. qt-rt-bug-002.png
          qt-rt-bug-002.png
          54 kB
        3. qt-rt-bug-003.png
          qt-rt-bug-003.png
          28 kB
        4. screen1.png
          screen1.png
          15 kB
        5. bug.PNG
          bug.PNG
          8 kB
        6. helloglRenderTextValgrindLogs.zip
          7 kB
        7. testgl.zip
          0.5 kB
        8. hellogl.zip
          7 kB
        9. hellogl.png
          hellogl.png
          33 kB
        10. qt-font-bug-on-win7.png.jpg
          qt-font-bug-on-win7.png.jpg
          11 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kjernase Trond Kjernåsen (Inactive)
            edie Daron Andrew Edie (Inactive)
            Votes:
            8 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes